--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Rothko Painting</title>
+  </head>
+  <body>
+    <img
+      src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-1.png"
+    />
+  </body>
 </html>
