--- a/index.html
+++ b/index.html
@@ -4,9 +4,5 @@
     <meta charset="UTF-8" />
     <title>Rothko Painting</title>
   </head>
-  <body>
-    <img
-      src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-3.png"
-    />
-  </body>
+  <body></body>
 </html>
