--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8" />
     <title>Rothko Painting</title>
   </head>
-  <body></body>
+  <body>
+    <div class="canvas"></div>
+  </body>
 </html>
