--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Rothko Painting</title>
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <div class="canvas"></div>
