--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <div class="canvas"></div>
+    <div class="frame">
+      <div class="canvas"></div>
+    </div>
   </body>
 </html>
