--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="frame">
       <div class="canvas"></div>
       <div class="one"></div>
+      <div class="two"></div>
     </div>
   </body>
 </html>
