--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div class="frame">
-      <div class="canvas"></div>
-      <div class="one"></div>
-      <div class="two"></div>
+      <div class="canvas">
+        <div class="one"></div>
+        <div class="two"></div>
+      </div>
     </div>
   </body>
 </html>
